# catboard

./: .gitignore  CI_PLAN.md  Cargo.toml  LICENSE  PLAN.md  README.md  deny.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
Formula/: catboard.rb
docs/: finder-extension-phases.md  finder-extension-plan.md
docs/phases/: phase-1-xcode-setup.md  phase-2-catboard-core.md  phase-2.5-core-tests.md  phase-3-finder-extension.md  phase-4-container-app.md  phase-5-distribution.md
macos/Copy to Clipboard.workflow/Contents/: Info.plist  document.wflow
src/: clipboard.rs  error.rs  file.rs  lib.rs  main.rs  ocr.rs
swift/CatboardFinder/: Debug.xcconfig.template  Release.xcconfig.template  project.yml
swift/CatboardFinder/CatboardCore/: CatboardCore.h  CatboardError.swift  Clipboard.swift  FileReader.swift  Info.plist  Logging.swift  OCREngine.swift  PDFExtractor.swift  Placeholder.swift
swift/CatboardFinder/CatboardCoreTests/: CatboardCoreTests.swift
swift/CatboardFinder/CatboardFinder/: AppDelegate.swift
swift/CatboardFinder/FinderExtension/: FinderSync.entitlements  FinderSync.swift  Info.plist
swift/catboard-ocr/: Package.swift
swift/catboard-ocr/Sources/: main.swift
tests/: integration.rs
